@@ -19,3 +19,4 @@ Vladislav Bjelic           <vladislav@gmail.com>
 Alex Kiernan               <alex.kiernan@gmail.com>
 Dominique Rousseau         <d.rousseau@nnx.com>
 Tim Devries                <tdevries@northrock.bm>
+Slobodan Tomic             <stomic@loznica.com>
