@@ -1,5 +1,5 @@
 // L2TPNS Global Stuff
-// $Id: l2tpns.h,v 1.92 2005-09-19 00:29:12 bodea Exp $
+// $Id: l2tpns.h,v 1.93 2005-09-30 13:13:26 bodea Exp $
 
 #ifndef __L2TPNS_H__
 #define __L2TPNS_H__
@@ -15,7 +15,7 @@
 #include <sys/types.h>
 #include <libcli.h>
 
-#define VERSION	"2.1.8"
+#define VERSION	"2.1.9"
 
 // Limits
 #define MAXTUNNEL	500		// could be up to 65535
